Add module to locally build and run openncp as docker-compose stack.