@@ -63,7 +63,7 @@
                 <configuration>
                     <!--<forkCount>3</forkCount>-->
                     <!--<reuseForks>true</reuseForks>-->
-                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+                    <argLine>-Xmx1024m</argLine>
                 </configuration>
             </plugin>
             <plugin>
